Fix list spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,11 +4,6 @@ sitemap: false
 @charset "utf-8";
 @import "so-simple";
 
-/* Reduce space between workshop list items */
-.workshop-list li {
-  margin-bottom: 0.3em !important;
-}
-
 /* Custom color styles for Med-CORDEX site */
 
 body h1.page-title,
